--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Printing'
 - !lcsh 'Typesetting'
 - !lcc 'Z'
+- GITenberg
 title: "Typesetting\r\nA primer of information about working at the case, justifying,\
   \ spacing, correcting, making-up, and other operations employed in setting type\
   \ by hand"
